force-app/main/default/objects/Zip_Lookup_Response__c/Zip_Lookup_Response__c.object-meta.xml
<CustomObject>
    <label>Zip Lookup Response</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Zip Lookup Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Lookup Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>