force-app/main/default/objects/Zip_Lookup_Response__c/fields/Country_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Country_Abbreviation__c</fullName>
    <label>Country Abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>