force-app/main/default/objects/Zip_Lookup_Response__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>PostCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>